--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "lib": ["ES6","dom"],
-        //"target": "es6"
+        "target": "es6",
+        "outDir": "./js",
     }
 
 }
